welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.error
ColumnByColumn:26: error: not found: value getLargeur
		for (j<-0 to getLargeur-1) {
                             ^